--- a/index.qmd
+++ b/index.qmd
@@ -58,7 +58,7 @@ To access Python on  Uni machines:
 | 1     |   |   1 |  |
 | 2     |   |   1 | Quiz 1|
 | 3     |   |   2 |        |
-| 4     |   |   2 | Quiz 2  |
+| 4     | 3.4  |   2 | Quiz 2  |
 | 5     |   |   3 |
 | 6     |   |   3 | Quiz 3|
 | 7     |   |   4 | Test 1|
